# msds-rag

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
cli/: msds_cli.py
core/: __init__.py  model_client.py  pipeline.py  prompts.py  retriever.py
core/clients/: naver.py  upstage.py
ingest/: ingest_corpus.py  ingest_jsonl.py
output/: HW-Cleaner_200_section09_naver_20260428_215544.md  HW-Cleaner_200_section09_upstage_20260429_065029.md
sample/: msds-rag-pipeline.py
sample/msds_data/: chunks.jsonl
tests/: conftest.py  test_cli.py  test_ingest_jsonl.py  test_model_client.py  test_naver_client_integration.py  test_naver_client_unit.py  test_pipeline.py  test_prompts.py  test_retriever.py  test_upstage_client_integration.py  test_upstage_client_unit.py
